Minicraft+ version 2.0.7
* Farming update.
* Made crops grow slower.
+ Added potatoes.
* Updated some textures; wood now looks better.


Minicraft+ version 2.0.6

+ Prevented players from getting stuck in skyholes with a cool animation
* Fixed the creeper's explosion to only hurt mobs if it actually explodes
* Made the quick-save key configurable
+ Added French localization
+ Added more buildings, including abandoned villages
* Let you place floors on clouds
* Fixed small line in the snake sprite that shouldn't be there
* Water and lava now form obsidian, and don't look like sand when they are next to each other
* Totally overhauled fishing!
+ Added paths, use a pickaxe on grass to make them
+ You can now craft obsidian walls and doors
+ Resource packs are now possible! Guide is on the wiki
- Knights and Snakes only have 4 levels instead of 5
* Creepers have been buffed
* Villages and spawners can no longer override stair barriers (to the sky or the dungeon)
* TNT can't break hard rock tiles or obsidian walls
* Menus that don't have frames don't render the title background


Minicraft+ version 2.0.5

+ Added tool durability to all tools
* Updated door sprites and a couple others in minor ways
* Fixed a couple more multiplayer bugs; also, as of dev6, players should stop crashing when changing levels
+ Added window popup to display errors
+ Added Spanish localization
* Fixed some localization bugs
* Fixed bug with item crafting and reference
* Fixed bug with dungeon chests refilling on load
* Allowed creative player to walk outside cloud tiles in the sky
* Made hoe turn grass into dirt instead of straight to farmland; but with significantly higher chance of seeds
* Fixed bug with "Click to focus" text rendering
* Fixed bug with armor loading
+ Added escape potion, which brings you one level closer to the surface from where it's used
* Made some adjustments to some of the sprites for improved detail