@@ -1,7 +1,7 @@
 # Minicraft Plus
 Minicraft+ is a modded version of minicraft that adds many more features to the original version. To learn more about minicraft, or play it yourself, take a look at [www.playminicraft.com](https://www.playminicraft.com).
 
-The code was a bit of a mess at first, due to inexperience and several years of abandonment, but after a number of months, I'm finally more or less happy with it. I have personally done a couple of things for the mod recently; for the first few months, I was just renovating code, not really adding that much; but after that was done, the main visible feature I've added is a multiplayer mode! It works pretty well; though there's still some to do. And the code still isn't perfect, but hopefully it'll get there eventually. This project isn't getting abandoned by me anytime soon. :)
+The code was a bit of a mess at first, due to inexperience and several years of abandonment, but after a number of months, I'm finally more or less happy with it. I have personally done a couple of things for the mod recently; for the first few months, I was just renovating code, not really adding that much; but after that was done, the main visible feature I've added is a multiplayer mode! It works pretty well; though there's still some to do. And the code still isn't perfect, but hopefully it'll get there eventually. This project isn't getting abandoned by me anytime soon
 
 ## Major Features
 Here is a small share of the more major features that this mod adds to the original minicraft game:
@@ -16,34 +16,31 @@ Here is a small share of the more major features that this mod adds to the origi
 * Personal crafting menu
 * Beds
 * Mob Spawners (with loot chests)
-* expanded storyline; 4th dungeon level, and Second Boss
+* An expanded storyline; 4th dungeon level, and Second Boss
 * Bigger/Resizable screen size
 * Key Binding customization, so you can change the key controls
+* Localization: Different languages
 
 You can find a more comprehensive list of the earlier versions, before 1.9, in [this minecraft forum post](http://www.minecraftforum.net/forums/off-topic/general-gaming/452036-v1-6-minicraft-plus). Be aware however, that it's old; it's from many years ago before the project was abandoned.
 
 ##### features that I added personally to the mod:
-* rename, copy world options
+* Rename, copy world options
 * Multiplayer mode
 * Resizable screen size
 * Key Binding customization, so you can change the key controls
 * Saved settings
-* ability to drop items
-* Suface lighting being much more gradual, and not stuck to 4 increments.
+* Ability to drop items
+* Surface lighting being much more gradual, and not stuck to 4 increments.
 * Improvements to mob spawning, including mob despawning, mob count caps, and variable mob spawning rates
-* Many other tidbits and improvements. :)
+* Many other tidbits and improvements
 
 ### Current Goals
 
-Things I plan on implementing, _hopefully_ sooner rather than later... ;)
+Things I plan on implementing, _hopefully_ sooner rather than later...
 
 * Tutorial... less-than-6-year-old one coming eventually!
 
-* Add some nice music! Maybe pixely... we're working on that now, sort-of.
-
-* Auto-update system, along with a version chooser.
-
-* ...Find lots more in the other text files in the main project folder.
+* Bugfixes and cleanup
 
 ### Ideas for future additions
 
@@ -55,7 +52,7 @@ Things I will probably add later, rather than sooner.
 
 #### Far, far away...
 
-These are simply **ideas**, and have no guarantee of being implemented any time soon, or even at all. Could be becuase they're complicated, or could be because I just haven't bothered considering them yet. :P
+These are simply **ideas**, and have no guarantee of being implemented any time soon, or even at all. Could be becuase they're complicated, or could be because I just haven't bothered considering them yet
 If their implementation becomes more likely, they will be moved to a different section.
 
 * Custom Skins
@@ -65,4 +62,4 @@ If their implementation becomes more likely, they will be moved to a different s
 * Chickens
 * Minecarts
 * World editors
-* Boats, b/c they require infinite terrain and vast oceans. ;)
+* Boats, because they require infinite terrain and vast oceans
