@@ -12,12 +12,13 @@ public class FoodItem extends StackableItem {
 	
 	protected static ArrayList<Item> getAllInstances() {
 		ArrayList<Item> items = new ArrayList<>();
-		
-		items.add(new FoodItem("Bread", new Sprite(7, 0, 0), 2));
+
+		items.add(new FoodItem("Baked Potato", new Sprite(19, 0, 0), 1));
 		items.add(new FoodItem("Apple", new Sprite(16, 0, 0), 1));
 		items.add(new FoodItem("Raw Pork", new Sprite(10, 0, 0), 1));
 		items.add(new FoodItem("Raw Fish", new Sprite(14, 0, 0), 1));
 		items.add(new FoodItem("Raw Beef", new Sprite(12, 0, 0), 1));
+		items.add(new FoodItem("Bread", new Sprite(7, 0, 0), 2));
 		items.add(new FoodItem("Cooked Fish", new Sprite(15, 0, 0), 3));
 		items.add(new FoodItem("Cooked Pork", new Sprite(11, 0, 0), 3));
 		items.add(new FoodItem("Steak", new Sprite(13, 0, 0), 3));
@@ -26,13 +27,13 @@ public class FoodItem extends StackableItem {
 		return items;
 	}
 	
-	private int heal; // the amount of hunger the food "satisfies" you by.
+	private int feed; // the amount of hunger the food "satisfies" you by.
 	private int staminaCost; // the amount of stamina it costs to consume the food.
 	
-	private FoodItem(String name, Sprite sprite, int heal) { this(name, sprite, 1, heal); }
-	private FoodItem(String name, Sprite sprite, int count, int heal) {
+	private FoodItem(String name, Sprite sprite, int feed) { this(name, sprite, 1, feed); }
+	private FoodItem(String name, Sprite sprite, int count, int feed) {
 		super(name, sprite, count);
-		this.heal = heal;
+		this.feed = feed;
 		staminaCost = 5;
 	}
 	
@@ -40,7 +41,7 @@ public class FoodItem extends StackableItem {
 	public boolean interactOn(Tile tile, Level level, int xt, int yt, Player player, Direction attackDir) {
 		boolean success = false;
 		if (count > 0 && player.hunger < Player.maxHunger && player.payStamina(staminaCost)) { // if the player has hunger to fill, and stamina to pay...
-			player.hunger = Math.min(player.hunger + heal, Player.maxHunger); // restore the hunger
+			player.hunger = Math.min(player.hunger + feed, Player.maxHunger); // restore the hunger
 			success = true;
 		}
 		
@@ -51,6 +52,6 @@ public class FoodItem extends StackableItem {
 	public boolean interactsWithWorld() { return false; }
 	
 	public FoodItem clone() {
-		return new FoodItem(getName(), sprite, count, heal);
+		return new FoodItem(getName(), sprite, count, feed);
 	}
 }
