@@ -2,6 +2,7 @@ package minicraft.level.tile.farming;
 
 import minicraft.entity.Direction;
 import minicraft.entity.Entity;
+import minicraft.entity.ItemEntity;
 import minicraft.entity.mob.Mob;
 import minicraft.entity.mob.Player;
 import minicraft.gfx.Screen;
@@ -21,20 +22,11 @@ public class Plant extends FarmTile {
     }
 
     @Override
-    public void render(Screen screen, Level level, int x, int y) {
-        int age = level.getData(x, y);
-        int icon = age / (maxAge / 5);
-
-        Tiles.get("Farmland").render(screen, level, x, y);
-
-        screen.render(x * 16 + 0, y * 16 + 0, 13 + 0 * 32 + icon, 0, 1);
-        screen.render(x * 16 + 8, y * 16 + 0, 13 + 0 * 32 + icon, 0, 1);
-        screen.render(x * 16 + 0, y * 16 + 8, 13 + 0 * 32 + icon, 1, 1);
-        screen.render(x * 16 + 8, y * 16 + 8, 13 + 0 * 32 + icon, 1, 1);
-    }
+    public void render(Screen screen, Level level, int x, int y) {}
 
     @Override
     public void steppedOn(Level level, int xt, int yt, Entity entity) {
+        if (entity instanceof ItemEntity) return;
         super.steppedOn(level, xt, yt, entity);
         harvest(level, xt, yt, entity);
     }
